--- a/src/weather.css
+++ b/src/weather.css
@@ -1,16 +1,17 @@
-body{
-  background-color: rgb(98, 92, 92);
+body {
+  background-color: blanchedalmond;
 }
 
 .ParentDiv {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .OuterBox {
+  border: 3px solid white;
   height: 70%;
   background-image: url(wearher.webp);
   background-size: cover;
@@ -19,43 +20,59 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap:10%;
+  gap: 10%;
   border-radius: 5%;
-  box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.1), 0 10px 20px 0 rgba(0, 0, 0, 0.7);
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.3), 0 10px 20px 0 rgba(0, 0, 0, 0.7);
 
 }
+
 .InputCity {
-  margin-top: 1rem;
   border-radius: 10px;
   width: 100%;
-  height: 100%;
+  height: 3rem;
 }
 
-.inputfield{
+.inputfield {
+  margin-top: 2rem;
   display: flex;
-  align-items:center;
-  width:65%;
+  justify-content: center;
+  align-items: center;
+  width: 65%;
 
 }
-.Cross{
-  top:18%;
-  position:absolute;
-  right:40%;
+
+.Cross {
+  top: 21%;
+  position: absolute;
+  right: 40%;
 }
 
-.Cross:hover{
-background-color: rgba(0, 0, 0, 0.205);
+.Cross:hover {
+  background-color: rgba(0, 0, 0, 0.205);
 }
 
-.WeatherInfo{
+.WeatherInfo {
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap:5%;
+  gap: 5%;
   align-items: center;
 }
-.font{
+
+.font {
   font-weight: 800;
-  color:white;
-  font-family:'Times New Roman', Times, serif;
+  color: white;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+@media only screen and (max-width:425px) {
+  .OuterBox {
+    height: 70%;
+    width: 100%;
+  }
+
+  .Cross {
+    right:21%;
+  }
+
 }
